--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ether Metal</title>
+    <script>
+    ((window.gitter = {}).chat = {}).options = { room: 'ethermetal/Lobby' };
+    </script>
+    <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
   </head>
   <body>
     <div id="root"></div>
