Add email signup

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     ((window.gitter = {}).chat = {}).options = { room: 'ethermetal/Lobby' };
     </script>
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
-
+    <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us16.list-manage.com","uuid":"21cc830db81a190c1c2263851","lid":"85e6546fcc"}) })</script>
   </head>
   <body>
     <div id="root"></div>
